--- a/about.html
+++ b/about.html
@@ -57,6 +57,8 @@
     a:hover {
         color: yellow;
     }
+
+    
 </style>
 
 <body>
@@ -65,62 +67,85 @@
         <div class="container-xxl position-relative p-0"
             style="background-image: url('/images/Untitled.jpeg'); background-size: cover; background-position: center center; background-repeat: no-repeat;">
             <nav class="navbar navbar-expand-lg navbar-dark px-4 px-lg-5 py-3 py-lg-0">
-                <a href="" class="navbar-brand p-0 position-absolute mt-4"
-                    style="display: flex; align-items: center; margin-left: -70px;">
-                    <i class="bi bi-dot text-warning" style="font-size: 900%;"></i>
-                    <h1 class="text-white mt-4 fw-bold"
-                        style="font-size: 120%; margin-left: -60px; letter-spacing: 10px;">NYUS</h1>
-                </a>
+                <div class="container-fluid">
+                    <a href="#" class="navbar-brand p-0 position-absolute mt-4"
+                        style="display: flex; align-items: center; margin-left: -70px;">
+                        <i class="bi bi-dot text-warning" style="font-size: 900%;"></i>
+                        <h1 class="text-white mt-4 fw-bold"
+                            style="font-size: 120%; margin-left: -60px; letter-spacing: 10px;">NYUS</h1>
+                    </a>
 
-                <button class="navbar-toggler btn-sm" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse mt-3" id="navbarCollapse" style="left:-17px; position: relative;">
-                    <div class="navbar-nav ms-auto py-0 pe-4">
-                        <a href="index.html" class="nav-item nav-link mx-3">Home</a>
-                        <a href="about.html" class="nav-item nav-link active mx-3">About US</a>
-                        <div class="nav-item dropdown">
-                            <a href="/menu.html" class="nav-link mx-3" id="menuDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Menu
-                                <i class="fa fa-chevron-down ms-2 bg- small-icon" aria-hidden="true"></i>
-                            </a>
-                            <ul class="dropdown-menu rounded-0" aria-labelledby="menuDropdown"
-                                style="border-top: 3px solid gold;">
-                                <li><a class="dropdown-item menu-theme" href="/menu.html" data-theme="light">Light
-                                        Theme</a></li>
-                                <li><a class="dropdown-item menu-theme" href="/menu.html?theme=dark"
-                                        data-theme="dark">Dark Theme</a></li>
-                            </ul>
-                        </div>
-                        <a href="testimonial.html" class="nav-item nav-link mx-3">Testimonial</a>
-                        <a href="contact.html" class="nav-item nav-link mx-3">Contact</a>
+                    <div class="d-flex ms-auto align-items-end position-relative d-lg-none">
+                        <button class="toggle-btn" id="toggle-btn">
+                            <span class="menu-icon">&#9776;</span>
+                            <span class="close-icon">&#10005;</span>
+                        </button>
+                        <ul id="nav-links">
+                            <li class="divider"><a href="./index.html" >Home</a></li>
+                            <li class="divider"><a href="./about.html" class="active">About Us</a></li>
+                            <li class="dropdown divider">
+                                <a href="/menu.html">Menu &#9662;</a>
+                                <ul class="dropdown-content">
+                                    <li><a href="/menu.html">Light</a></li>
+                                    <li><a href="/menu.html?theme=dark">Dark</a></li>
+                                </ul>
+                            </li>
+                            <li class="divider"><a href="./testimonial.html">Testimonial</a></li>
+                            <li class="divider"><a href="./contact.html">Contact</a></li>
+                            <li class="divider"><button class="btn-reservation"><a
+                                        href="./reservation.html"><b>Reservation</b></a></button></li>
+                        </ul>
                     </div>
-                    <a href="/reservation.html" class="btn btn-outline-light px-3 text-uppercase rounded-0 custom-font"
-                        style="padding: 10px;font-size: 12px;">Reservation</a>
+
+                    <div class="collapse  navbar-collapse mt-3" id="navbarCollapse">
+                        <div class="navbar-nav ms-auto py-0 pe-4">
+                            <a href="index.html" class="nav-item nav-link mx-3">Home</a>
+                            <a href="about.html" class="nav-item nav-link active mx-3">About US</a>
+                            <div class="nav-item dropdown">
+                                <a href="#" class="nav-link mx-3" id="menuDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    Menu
+                                    <i class="fa fa-chevron-down ms-2 bg- small-icon" aria-hidden="true"></i>
+                                </a>
+                                <ul class="dropdown-menu rounded-0" aria-labelledby="menuDropdown"
+                                    style="border-top: 3px solid gold;">
+                                    <li><a class="dropdown-item menu-theme" href="/menu.html" data-theme="light">Light
+                                            Theme</a></li>
+                                    <li><a class="dropdown-item menu-theme" href="/menu.html?theme=dark"
+                                            data-theme="dark">Dark Theme</a></li>
+                                </ul>
+                            </div>
+                            <a href="testimonial.html" class="nav-item nav-link mx-3">Testimonial</a>
+                            <a href="contact.html" class="nav-item nav-link mx-3">Contact</a>
+                        </div>
+                        <a href="/reservation.html"
+                            class="btn btn-outline-light px-3 text-uppercase rounded-0 custom-font"
+                            style="padding: 10px;font-size: 12px;">Reservation</a>
+                    </div>
                 </div>
-            </nav>
-            <!-- nav body start -->
-            <div class="container-xxl py-5 mb-5 d-flex justify-content-center">
-                <div class="container my-5 py-5 text-center">
-                    <div class="row align-items-center g-5">
-                        <div class="col-lg-6 mx-auto">
-                            <h1 class="display-3 text-white fw-bold" style="font-size: 73px;">About US</h1>
-                            <p class="text-white animated sliderInLeft mb-4 pb-2 mt-4">Massa praesent sit suspendisse ac
-                                volutpat amet.<br /> Commodo elit at non neque ullamcorper id.</p>
-                        </div>
+        </div>
+        </nav>
+
+        <!-- nav body start -->
+        <div class="container-xxl py-5 mb-5 d-flex justify-content-center">
+            <div class="container my-5 py-5 text-center">
+                <div class="row align-items-center g-5">
+                    <div class="col-lg-6 mx-auto">
+                        <h1 class="display-3 text-white fw-bold" style="font-size: 73px;">About US</h1>
+                        <p class="text-white animated sliderInLeft mb-4 pb-2 mt-4">Massa praesent sit suspendisse ac
+                            volutpat amet.<br /> Commodo elit at non neque ullamcorper id.</p>
                     </div>
-                    <div class="d-flex justify-content-center" style="margin-top: 75px;">
-                        <div class="border-start border-1 border-warning" style="height: 86px;"></div>
-                    </div>
+                </div>
+                <div class="d-flex justify-content-center" style="margin-top: 75px;">
+                    <div class="border-start border-1 border-warning" style="height: 86px;"></div>
                 </div>
             </div>
-            <!-- nav body end -->
+        </div>
+        <!-- nav body end -->
         </div>
     </header>
+
+
 
 
 
@@ -221,21 +246,25 @@
         <div class="container">
             <div class="row" style="margin-top: 160px;">
                 <div class="col-lg-4 col-12 mb-5">
-                    <h1 class="position-relative text-nowrap text-white mt-5" style="font-size: 50px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+                    <h1 class="position-relative text-nowrap text-white mt-5"
+                        style="font-size: 50px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
                         Our Specialties
                     </h1>
                     <div>
                         <p class="position-relative text-start text-nowrap text-white fs-6">
-                            Consequat facilisi ultricies integer eu nibh <br />pellentesque. Morbi ac sit ultrices quis<br /> dignissim lectus. Pellentesque nisl, ac,<br /> bibendum arcu vestibulum aliquam.
+                            Consequat facilisi ultricies integer eu nibh <br />pellentesque. Morbi ac sit ultrices
+                            quis<br /> dignissim lectus. Pellentesque nisl, ac,<br /> bibendum arcu vestibulum aliquam.
                         </p>
-                        <a href="#" class="btn btn-outline-light px-4 mt-2 text-uppercase rounded-0 custom-font" style="padding: 10px; font-size: 12px;">
+                        <a href="#" class="btn btn-outline-light px-4 mt-2 text-uppercase rounded-0 custom-font"
+                            style="padding: 10px; font-size: 12px;">
                             View All Menu
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-8 d-flex flex-wrap">
                     <div class="col-md-6 col-12 mb-4">
-                        <img src="./img/nyus-toasted-bread-with-grape.png" class="img-fluid mb-2" alt="Toasted Bread with Grape">
+                        <img src="./img/nyus-toasted-bread-with-grape.png" class="img-fluid mb-2"
+                            alt="Toasted Bread with Grape">
                         <p class="text-white text-center">
                             <label class="nunito-custom">NYUS TOASTED BREAD WITH GRAPE</label>
                             <br />
@@ -258,7 +287,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- our specialties end -->
 
     <!-- meet the team start -->
@@ -472,6 +501,20 @@
         crossorigin="anonymous"></script>
 
     <!-- Footer end -->
+
+   <!-- toggle button js -->
+   <script>
+    document.getElementById('toggle-btn').addEventListener('click', function () {
+        const navLinks = document.getElementById('nav-links');
+        const menuIcon = document.querySelector('.menu-icon');
+        const closeIcon = document.querySelector('.close-icon');
+
+        navLinks.classList.toggle('show');
+        menuIcon.style.display = navLinks.classList.contains('show') ? 'none' : 'block';
+        closeIcon.style.display = navLinks.classList.contains('show') ? 'block' : 'none';
+    });
+
+</script>
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
