--- a/menu.html
+++ b/menu.html
@@ -17,6 +17,7 @@
         .small-icon {
             font-size: 12px;
         }
+       
     </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -63,30 +64,46 @@
                         style="font-size: 120%; margin-left: -60px; letter-spacing: 10px;">NYUS</h1>
                 </a>
 
-                <button class="navbar-toggler btn-sm" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <div class="d-flex ms-auto align-items-end position-relative d-lg-none">
+                    <button class="toggle-btn" id="toggle-btn">
+                        <span class="menu-icon">&#9776;</span>
+                        <span class="close-icon">&#10005;</span>
+                    </button>
+                    <ul id="nav-links">
+                        <li class="divider"><a href="./index.html" >Home</a></li>
+                        <li class="divider"><a href="./about.html" >About Us</a></li>
+                        <li class="dropdown divider">
+                            <a href="/menu.html" class="active">Menu &#9662;</a>
+                            <ul class="dropdown-content">
+                                <li><a  href="/menu.html">Light</a></li>
+                                <li><a  href="/menu.html?theme=dark">Dark</a></li>
+                            </ul>
+                        </li>
+                        <li class="divider"><a href="./testimonial.html">Testimonial</a></li>
+                        <li class="divider"><a href="./contact.html">Contact</a></li>
+                        <li class="divider"><button class="btn-reservation"><a
+                                    href="./reservation.html"><b>Reservation</b></a></button></li>
+                    </ul>
+                </div>
 
-                <div class="collapse navbar-collapse mt-3" id="navbarCollapse" style="left:-17px; position: relative;">
+                <div class="collapse  navbar-collapse mt-3" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0 pe-4">
-                        <a href="/index.html" class="nav-item nav-link mx-3">Home</a>
-                        <a href="/about.html" class="nav-item nav-link mx-3">About US</a>
+                        <a href="./index.html" class="nav-item nav-link mx-3">Home</a>
+                        <a href="./about.html" class="nav-item nav-link mx-3">About US</a>
                         <div class="nav-item dropdown">
                             <a href="/menu.html" class="nav-link active  mx-3" id="menuDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Menu
                                 <i class="fa fa-chevron-down ms-2 bg- small-icon" aria-hidden="true"></i> </a>
-                            <ul class="dropdown-menu rounded-0" aria-labelledby="menuDropdown" style="border-top: 3px solid rgba(255, 217, 0, 0.852);">
+                            <ul class="dropdown-menu  rounded-0" aria-labelledby="menuDropdown" style="border-top: 3px solid rgba(255, 217, 0, 0.852);">
                                 <li><a class="dropdown-item menu-theme" href="#" data-theme="light">Light Theme</a></li>
                                 <li><a class="dropdown-item menu-theme" href="#" data-theme="dark">Dark Theme</a></li>
                             </ul>
                         </div>
-                        <a href="testimonial.html" class="nav-item nav-link mx-3">Testimonial</a>
-                        <a href="contact.html" class="nav-item nav-link mx-3">Contact</a>
+                        <a href="./testimonial.html" class="nav-item nav-link mx-3">Testimonial</a>
+                        <a href="./contact.html" class="nav-item nav-link mx-3">Contact</a>
                     </div>
-                    <a href="/reservation.html" class="btn btn-outline-light px-3 text-uppercase rounded-0 custom-font"
+                    <a href="./reservation.html" class="btn btn-outline-light px-3 text-uppercase rounded-0 custom-font"
                         style="padding: 10px;">Reservation</a>
                 </div>
             </nav>
@@ -627,7 +644,7 @@
             const theme = urlParams.get('theme');
 
             if (theme === 'dark') {
-                document.body.classList.add('dark-theme'); // Add your dark theme class here
+                document.body.classList.add('dark-theme'); 
             }
 
             const themeLinks = document.querySelectorAll('.menu-theme');
@@ -640,6 +657,21 @@
             });
         });
     </script>
+
+  <!-- toggle button js -->
+  <script>
+    document.getElementById('toggle-btn').addEventListener('click', function () {
+        const navLinks = document.getElementById('nav-links');
+        const menuIcon = document.querySelector('.menu-icon');
+        const closeIcon = document.querySelector('.close-icon');
+
+        navLinks.classList.toggle('show');
+        menuIcon.style.display = navLinks.classList.contains('show') ? 'none' : 'block';
+        closeIcon.style.display = navLinks.classList.contains('show') ? 'block' : 'none';
+    });
+
+</script>
+
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 
 
